as4/lab4.txt
William Baumbacher
lab 4 log

I begin by downloading the tar file "coreutils-with-bug.tar" onto my computer.
I make it into a folder and add it into my lab 4 directory using cyberduck.
Then I navigate into the directory coreutils-with-bug and try to configure:
     $ ./configure
Permission is denied so I have to change the permissions to allow execution:
     $ chmod u+x configure
Now I configure and try to make, make install:
    $ ./configure
    $ make
When I run the make command I get an error:

In file included from utimecmp.c:41:
utimens.h:2:5: error: conflicting types for 'futimens'
    2 | int futimens (int, char const *, struct timespec const [2]);
      |     ^~~~~~~~
In file included from utimecmp.h:25,
                 from utimecmp.c:25:
/usr/include/sys/stat.h:373:12: note: previous declaration of 'futimens' was here
  373 | extern int futimens (int __fd, const struct timespec __times[2]) __THROW;
      |            ^~~~~~~~

This error can be resolved by installing the patch.
     $ wget http://web.cs.ucla.edu/classes/winter20/cs35L/assign/coreutils.diff
     $ patch -p0 < coreutils.diff
